src/objects/skuid__Page_Assignment__c.object
<CustomObject>
    <description>Stores situations / occasions where Skuid Pages should be used, e.g. Skuid Page &apos;TeacherStudentView&apos; should be used as the View page for Contact records of Record Type &apos;Student&apos; where the running user&apos;s Profile is &apos;Teacher&apos;</description>
    <fields>
        <fullName>skuid__Action_Type__c</fullName>
        <description>The Salesforce action type(s) to which this Page Assignment applies</description>
        <inlineHelpText>The Salesforce action type(s) to which this Page Assignment applies</inlineHelpText>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tab</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Clone</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>skuid__Assigned_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that this Page Assignment is for, if any.</description>
        <inlineHelpText>The User that this Page Assignment is for, if any.</inlineHelpText>
        <label>Assigned To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Page_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>skuid__Context__c</fullName>
        <label>Applies To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Environment_Type__c</fullName>
        <defaultValue>&quot;Salesforce Classic&quot;</defaultValue>
        <description>Describes the environment (e.g. Salesforce Classic, Lightning) in which the Page Assignment was designed to use</description>
        <inlineHelpText>Describes the environment (e.g. Salesforce Classic, Lightning) in which the Page Assignment was designed to use</inlineHelpText>
        <label>Environment Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Classic</fullName>
                    <default>true</default>
                    <label>Salesforce Classic</label>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>skuid__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If false for a record, the record will not be considered when Page Assignment logic is processed.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Page to Use</label>
        <referenceTo>skuid__Page__c</referenceTo>
        <relationshipLabel>Page Assignments</relationshipLabel>
        <relationshipName>Page_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>skuid__RecordTypeDeveloperName__c</fullName>
        <description>The API / Developer Name of the Record Type to which this Page Assignment should apply</description>
        <inlineHelpText>The API / Developer Name of the Record Type to which this Page Assignment should apply</inlineHelpText>
        <label>Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__SObject_Type__c</fullName>
        <description>The name of the SObject that this Page Assignment is for. Can also be an arbitrary name, e.g.  &quot;SiteHome&quot;, for running Skuid from the component, e.g. &lt;skuid:page objecttype=&quot;SiteHome&quot;&gt; component with</description>
        <inlineHelpText>Which SObject, or other scenario, will this Page Assignment be used for? Could also be an arbitrary name, such as &quot;SiteHome&quot;, for running Skuid from the Visualforce Component.</inlineHelpText>
        <label>Object Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Use_Standard_Layouts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then standard layouts will be used instead of Skuid Pages for this Page Assignment.</description>
        <inlineHelpText>If checked, then standard layouts will be used instead of Skuid Pages for this Page Assignment.</inlineHelpText>
        <label>Use Standard Layouts</label>
        <type>Checkbox</type>
    </fields>
    <label>Page Assignment</label>
    <listViews>
        <fullName>skuid__All</fullName>
        <columns>NAME</columns>
        <columns>skuid__SObject_Type__c</columns>
        <columns>skuid__Action_Type__c</columns>
        <columns>skuid__Context__c</columns>
        <columns>skuid__RecordTypeDeveloperName__c</columns>
        <columns>skuid__Page__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>skuid__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Page Assignment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>skuid__Must_Select_Page_or_use_Standard_Layouts</fullName>
        <active>true</active>
        <description>You must select either a Skuid Page to use, or choose to use Standard Layouts.</description>
        <errorConditionFormula>AND(
ISBLANK(skuid__Page__c),
skuid__Use_Standard_Layouts__c = FALSE
)</errorConditionFormula>
        <errorMessage>You must either select a Skuid Page or select &quot;Use Standard Layouts&quot;.</errorMessage>
    </validationRules>
</CustomObject>